--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : Lisa Chen
 description              : Lisa Chen - Projects and CV 
-baseurl                  : "" # Set this to your repo name 
+baseurl                  : "fa25-portfolio-qc243-ui" # Set this to your repo name 
 
 # Theme and Style
 theme: jekyll-theme-minimal
